@@ -521,11 +521,14 @@ BUG FIXES
 	number of places (this showed up in the print-tests.R), and made 
 	unnecessary rounding errors on some platforms on e.g. signif(18000, 3).
 
-    o   window() was failing incorrectly due to representation errors
-	when the new and old deltat were not both integers (e.g. 0.1).
+    o	window() was sometimes failing incorrectly due to representation
+	errors when the new and old deltat were not both integers
+	(e.g. multiples of 0.1).
 
     o   The 'lm' methods for add1() and drop1() ignored offsets (which
 	were added for lm() after they written).  (PR#8049)
+
+    o   atan2(0+1i, 0+0i) was incorrectly NA (from a typo in complex.c).
 
 
 
